@@ -9,8 +9,9 @@
 * N Bug fixes:
   * Fixed prototype detection in C parser.  Can process ruby 1.8 C files
     again.
-  * Fix main page for frameless template.  Patch by Marcin Raczkowski.
-  * Fix missing stylesheet in generated chm.  Patch by Gordon Thiesfeld.
+  * Fixed main page for frameless template.  Patch by Marcin Raczkowski.
+  * Fixed missing stylesheet in generated chm.  Patch by Gordon Thiesfeld.
+  * Fixed the parsing of module names starting with '::'.
 
 === 2.1.0 / 2008-07-20
 
